src/objects/Trigger_Handler__c.object
<CustomObject>
    <description>Stores which classes to run in response to DML performed on an object.</description>
    <label>Trigger Handler</label>
    <nameField>
        <label>Trigger Handler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this Trigger Handler is in use.</description>
        <inlineHelpText>Indicates whether this Trigger Handler is in use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this class should run asynchronously in this transaction, for any of its After events.</description>
        <inlineHelpText>Indicates whether this class should run asynchronously in this transaction, for any of its After events.</inlineHelpText>
        <label>Asynchronous After Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>The name of the class to run.</description>
        <inlineHelpText>The name of the class to run.</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Order__c</fullName>
        <description>The order in which this class should run. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</description>
        <inlineHelpText>The order in which this class should run. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</inlineHelpText>
        <label>Load Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The name of the object the class should act on, for example, Account, Contact, or Opportunity.</description>
        <inlineHelpText>The name of the object the class should act on, for example, Account, Contact, or Opportunity.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Action__c</fullName>
        <description>The context in which this class should run, for example, before a record is inserted, after a record is deleted, etc.</description>
        <inlineHelpText>The context in which this class should run, for example, before a record is inserted, after a record is deleted, etc.</inlineHelpText>
        <label>Trigger Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BeforeInsert</fullName>
                </value>
                <value>
                    <fullName>BeforeUpdate</fullName>
                </value>
                <value>
                    <fullName>BeforeDelete</fullName>
                </value>
                <value>
                    <fullName>AfterInsert</fullName>
                </value>
                <value>
                    <fullName>AfterUpdate</fullName>
                </value>
                <value>
                    <fullName>AfterDelete</fullName>
                </value>
                <value>
                    <fullName>AfterUndelete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usernames_to_Exclude__c</fullName>
        <description>A semicolon-separated list of Usernames that this Trigger Handler will not run for. Leave blank to run for all Users.</description>
        <inlineHelpText>A semicolon-separated list of Usernames that this Trigger Handler will not run for. Leave blank to run for all Users.</inlineHelpText>
        <label>Usernames to Exclude</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP will no longer push updates to this Trigger Handler. Select this option if you have made changes that you do not want NPSP to overwrite.</description>
        <inlineHelpText>When selected, NPSP will no longer push updates to this Trigger Handler. Select this option if you have made changes that you do not want NPSP to overwrite.</inlineHelpText>
        <label>User Managed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>